kube/docmachinebackend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    deployment.kubernetes.io/revision: "1"
  labels:
    app: docmachinebackend
  name: docmachinebackend
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docmachinebackend
  template:
    metadata:
      labels:
        app: docmachinebackend
    spec:
      containers:
      - image: gcr.io/root-booking-369711/doc-machine-backend:v3.0.1
        imagePullPolicy: Always
        name: doc-machine-backend
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        ports:
        - containerPort: 3000
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: docmachinebackend
  name: docmachinebackend
  namespace: default
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
    nodePort: 30001
  selector:
    app: docmachinebackend
  sessionAffinity: None
  type: NodePort
