kube/docmachinebeta.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  labels:
    app: docmachinebeta
  name: docmachinebeta
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docmachinebeta
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: docmachinebeta
    spec:
      containers:
      - image: gcr.io/root-booking-369711/doc-machine-frontend:v3.1.0
        imagePullPolicy: Always
        name: doc-machine-frontend
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        ports:
        - containerPort: 80
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: docmachine-beta-service
spec:
  selector:
    app: docmachinebeta
  ports:
    - protocol: TCP
      port: 82
      targetPort: 80
  type: NodePort
